compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_variable_assignment_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3115
expression: "\ntype Wibble {\n  Wibble(a: Int, b: Int)\n}\n\npub fn main() {\n  let Wibble(a:, ..) as w = Wibble(1, 2)\n  a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
  Wibble(a: Int, b: Int)
}

pub fn main() {
  let Wibble(a:, ..) as w = Wibble(1, 2)
  a
}


----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:7:25
  │
7 │   let Wibble(a:, ..) as w = Wibble(1, 2)
  │                         ^ This variable is never used

Hint: You can safely remove it.
