compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_variable_raises_a_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1353
expression: "\npub fn main() {\n  let number = 1\n  number\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let number = 1
  number
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:4:3
  │
4 │   number
  │   ^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
