compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_variable_warnings_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 283
expression: "pub fn a(b) { 1 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn a(b) { 1 }

----- WARNING
warning: Unused function argument
  ┌─ /src/warning/wrn.gleam:1:10
  │
1 │ pub fn a(b) { 1 }
  │          ^ This argument is never used

Hint: You can ignore it with an underscore: `_b`.
