compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_variable_warnings_test2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 294
expression: "pub fn a() { let b = 1 5 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn a() { let b = 1 5 }

----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ pub fn a() { let b = 1 5 }
  │                  ^ This variable is never used

Hint: You can ignore it with an underscore: `_b`.
